ingress/prac2/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingresprac
spec:
  ingressClassName: nginx
  rules:
  - host:
  http:
  paths:
    - path: /
      pathType: Prefix
      backend:
        service:
          name: back-svc
          port:
            number: 3000
